--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "css-loader": "^6.7.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.4.0",
-    "file-loader": "^6.2.0",
     "next": "13.4.0",
     "next-videos": "^1.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hover-video-player": "^10.0.0",
     "style-loader": "^3.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
@@ -30,6 +30,7 @@
     "webpack-dev-server": "^4.15.0"
   },
   "devDependencies": {
+    "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
     "url-loader": "^4.1.1"
   }
