--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "PORT=3001 next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-hover-video-player": "^10.0.0",
     "style-loader": "^3.3.2",
+    "tabler-icons-react": "^1.56.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "webpack": "^5.82.0",
